integration passport successfully

--- a/Backend-Laboratorio/src/views/templates/cabezara.ejs
+++ b/Backend-Laboratorio/src/views/templates/cabezara.ejs
@@ -9,6 +9,7 @@
     rel="stylesheet"
     />
     <link rel="stylesheet" href="Style.css">
-    <title>Laboratorio | Clinico </title>
+    <link rel="shortcut icon" href="./logo.png"></link>
+    <title> <%= title%> </title>
 </head>
 
