--- a/Backend-Laboratorio/src/views/templates/form-login.ejs
+++ b/Backend-Laboratorio/src/views/templates/form-login.ejs
@@ -1,5 +1,4 @@
-<%- include('../templates/cabezara')-%>
-<link rel="stylesheet" href="./style.css">
+<%- include('../templates/cabezera')-%>
 <section class="container-form">
     <form action="/login" method="POST" >
         <img src="./Login.png" alt="Login" class="img-login">
