--- a/Backend-Laboratorio/src/views/templates/head.ejs
+++ b/Backend-Laboratorio/src/views/templates/head.ejs
@@ -5,7 +5,15 @@
 </div>
 <div class="header--navbar-container">
   <ul>
-      <li><a href="/">About us</a></li>
-      <li><a href="/login">Login</a></li>
+      <li>
+        <a href="/">
+          <%= people%>
+        </a>
+      </li>
+      <li>
+        <a href="/login">
+          Exit
+        </a>
+      </li>
   </ul>
 </div>
