--- a/Backend-Laboratorio/src/Css/Style.css
+++ b/Backend-Laboratorio/src/Css/Style.css
@@ -4,15 +4,21 @@
     box-sizing: border-box;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] { -moz-appearance:textfield; }
+
 html {
     min-height: 100%;
     font-size: 62.5%;
     font-family: "DM Sans", sans-serif;
-    /* position: relative; */
 }
 
 body{
-    background-color: #a7bed4;
     width: 100%;
     height: 100%;
 }
@@ -30,9 +36,11 @@ body{
 }
 
 header{
-    background: #b4d4e1;
+    background: whitesmoke;
+    border-bottom: 2px solid;
+    border-color: black;
     display: flex;
-    height: 45px;
+    height: 8vh;
     justify-content: space-between;
     min-width: 320px;
     width: 100%;
@@ -152,4 +160,86 @@ footer {
 
 footer p {
     font-size: 1.6rem;
+}
+
+
+/*Aqui va el Sidebar */
+
+.containerSidebar{
+    height: 84vh;
+    width: 18vw;
+    border: 2px solid;
+    border-color: black;
+}
+
+.SidebarHome{
+    display: flex;
+    height: 20%;
+    justify-items: center;
+    height: 60vh;
+    background-color: #423a3a;
+}
+
+.SidebarHome ul {
+    flex-direction: column;
+    font-size: 1.9rem;
+    font-weight: bold;
+    list-style: none;
+    width: 100%;
+    text-align: center;
+}
+
+.SidebarHome a {
+    color: var(--just-white);
+    text-decoration: none;
+    display: inline-block;
+    height: 13%;
+}
+
+
+.containerSidebar li {
+    background: #318aac !important;
+    border: 1.5px solid;
+    border-color: var(--off-white);
+    border-radius: 4px;
+    height: 8vh;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 0.5em 1.2em;
+    position: relative;
+}
+
+/* .buttonSidebar:before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 0PX;
+    background: rgba(255, 255, 255, 0.1);
+    transition: all 2s ease;
+} */
+
+.buttonSidebar:hover:before {
+    height: 100%;
+    cursor: pointer;
+}
+
+.buttonLogout{
+    background-color: #423a3a;
+    height: 8vh;
+    width: 18vw;
+}
+
+.buttonLogout ul{
+    display: flex;
+    font-size: 1.9rem;
+    font-weight: bold;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.buttonLogout a {
+    color: var(--just-white);
+    text-decoration: none;
 }
