--- a/Backend-Laboratorio/src/views/templates/cabezera.ejs
+++ b/Backend-Laboratorio/src/views/templates/cabezera.ejs
@@ -10,6 +10,10 @@
     />
     <link rel="stylesheet" href="Style.css">
     <link rel="shortcut icon" href="./logo.png"></link>
-    <title> <%= title%> </title>
+    <% if(title) { %>
+        <title> <%= title%> </title>
+        <% } else{ %>  
+        <title> <%= people%> </title>
+    <% } %>
 </head>
 
