--- a/Backend-Laboratorio/src/Css/Style.css
+++ b/Backend-Laboratorio/src/Css/Style.css
@@ -19,8 +19,8 @@ html {
 }
 
 body{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 :root {
@@ -52,7 +52,7 @@ header{
 }
 
 .header--navbar-container{
-    width: 250px;
+    width: 25vw;
     min-width: 150px;
     align-self: center;
 }
@@ -154,30 +154,34 @@ footer {
 }
 
 .footer-container{
-    width: 100%;
-   
+    width: 100vw;
 }
 
 footer p {
     font-size: 1.6rem;
 }
 
+/*Aqui va la interfaz*/
 
-/*Aqui va el Sidebar */
-
-.containerSidebar{
+.interface-container{
     height: 84vh;
-    width: 18vw;
-    border: 2px solid;
+    width: 100vw;
+    background-color: whitesmoke;
+    display: flex;
+}
+/*Aqui va el Sidebar */
+.containerSidebar{
+    display: block;
+    height: inherit;
+    width: 28vw;
+    border-right: 2px solid;
     border-color: black;
 }
 
 .SidebarHome{
     display: flex;
-    height: 20%;
     justify-items: center;
-    height: 60vh;
-    background-color: #423a3a;
+    height: 40vh;
 }
 
 .SidebarHome ul {
@@ -196,9 +200,21 @@ footer p {
     height: 13%;
 }
 
+.container-publisher-document{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-publisher-document p{
+    font-weight: bold;
+    font-size: 15px;
+}
+
 
 .containerSidebar li {
-    background: #318aac !important;
+    background: #4CAF50 !important;
     border: 1.5px solid;
     border-color: var(--off-white);
     border-radius: 4px;
@@ -209,37 +225,59 @@ footer p {
     position: relative;
 }
 
-/* .buttonSidebar:before {
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 0PX;
-    background: rgba(255, 255, 255, 0.1);
-    transition: all 2s ease;
-} */
-
 .buttonSidebar:hover:before {
     height: 100%;
     cursor: pointer;
 }
 
 .buttonLogout{
-    background-color: #423a3a;
-    height: 8vh;
-    width: 18vw;
-}
-
-.buttonLogout ul{
+    background-color: #4CAF50;
+    border: none;
+    border-color: black;
+    color: var(--just-white);
     display: flex;
     font-size: 1.9rem;
     font-weight: bold;
     justify-content: space-around;
-    list-style: none;
 }
 
-.buttonLogout a {
-    color: var(--just-white);
-    text-decoration: none;
+#formClosedSesion{
+    width: 5vw !important;
+    height: 8vh !important;
+}
+/* upload */
+
+#uploadForm-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    width: 72vw;
+    height: 84vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+input[type="file"] {
+    margin-bottom: 10px;
+}
+
+input[type="submit"] {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #45a049;
 }
