--- a/Backend-Laboratorio/src/views/pages/home.ejs
+++ b/Backend-Laboratorio/src/views/pages/home.ejs
@@ -3,5 +3,5 @@
     <header>
         <%- include('../templates/head')-%>
     </header>
-    <%- include('../templates/router')-%>
+    <%- include('../templates/read')-%>
 </body>
