Ajuste frontend app, crear tablas y query de instertar log

--- a/Backend-Laboratorio/src/views/templates/head.ejs
+++ b/Backend-Laboratorio/src/views/templates/head.ejs
@@ -6,12 +6,12 @@
 <div class="header--navbar-container">
   <ul>
       <li>
-        <a href="/">
+        <a href="/read">
           <%= people%>
         </a>
       </li>
       <li>
-        <a href="/login">
+        <a href="/read">
           Actualizar
         </a>
       </li>
