--- a/Backend-Laboratorio/src/views/templates/read.ejs
+++ b/Backend-Laboratorio/src/views/templates/read.ejs
@@ -8,9 +8,10 @@
             </ul>
         </div>
         <div class="container-publisher-document">
-            <p>Hematologia</p>
-            <p><%= dateLabo%> </p>
-            <p>Quimica</p>
+            <p>Documento</p>
+            <p><%= dateLaboDocument%> </p>
+            <p>Fecha Lectura</p>
+            <p><%= dateRead%> </p>
             <p>2023 San Juan de Dios 2023 ©</p>
         </div>
     </div>
