--- a/Backend-Laboratorio/src/views/templates/form-login.ejs
+++ b/Backend-Laboratorio/src/views/templates/form-login.ejs
@@ -4,13 +4,13 @@
         <img src="./Login.png" alt="Login" class="img-login">
         <div class="container-input-login">
             <img src="./user.png" alt="user" class="img-form-login-user">
-            <input type="number" name="ID" id="ID" placeholder="ID" autofocus>
+            <input type="number" name="ID" id="ID" placeholder="ID" autofocus oninput="validarFormulario()">
         </div>
         <div class="container-input-login">
             <img src="./show.png" alt="password" class="img-form-login-password" id="unlocked_show">
-            <input type="password" name="password" id="password" class="margin-right_input__password" placeholder="Contraseña" >
+            <input type="password" name="password" id="password" class="margin-right_input__password" placeholder="Contraseña" oninput="validarFormulario()">
         </div>
-        <input type="submit" value="LOGIN" class="input-button-login" id="sumbitForm">
+        <input type="submit" value="LOGIN" class="input-button-login" id="sumbitForm" disabled value="POST">
     </form>
     <script type="text/javascript">
         const unlocked = document.getElementById('unlocked_show')
@@ -22,5 +22,17 @@
                 inputPassword.type="password"
             }
         })
+
+        function validarFormulario() {
+            var username = document.getElementById('ID').value;
+            var password = document.getElementById('password').value;
+            var loginButton = document.getElementById('sumbitForm');
+          
+            if (username.trim() === '' || password.trim() === '') {
+                sumbitForm.disabled = true;
+            } else {
+                sumbitForm.disabled = false; value="POST"
+            }
+          }
     </script>
 </section>
